added part 03 transformers

--- a/Part02_recurrent_neural_networks.ipynb
+++ b/Part02_recurrent_neural_networks.ipynb
@@ -11,6 +11,12 @@
     "- https://distill.pub/2016/augmented-rnns\n",
     "- https://distill.pub/2019/memorization-in-rnns\n",
     "\n",
+    "- https://skymind.ai/wiki/lstm\n",
+    "\n",
+    "- [An Empirical Evaluation of Generic Convolutional and Recurrent Networks for Sequence Modeling](https://arxiv.org/abs/1803.01271)\n",
+    "\n",
+    "# Encoder / Decoder architecture\n",
+    "\n",
     "ULMfit and transfer learning\n",
     "http://nlp.fast.ai/classification/2018/05/15/introducting-ulmfit.html\n",
     "\n",
