Added working examples to transformer notebook

--- a/Part01_prerequisites.ipynb
+++ b/Part01_prerequisites.ipynb
@@ -796,7 +796,29 @@
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tqdm import tqdm_notebook as tqdmn\n",
+    "from torch.nn.utils import clip_grad_norm_\n",
+    "\n",
+    "for _ in tqdmn(range(num_epochs), total=num_epochs, desc=\"Epoch\"):\n",
+    "    steps = tqdmn(train_dataloader,\n",
+    "                  total=X.size(0) // (train_dataloader.batch_size + 1),\n",
+    "                  desc='Mini-batch')\n",
+    "    train_loss = 0\n",
+    "    for i_step, batch in enumerate(steps):\n",
+    "        batch_X, batch_y = batch\n",
+    "        loss, *_ = bert(batch_X, labels=batch_y)\n",
+    "        loss = loss / gradient_accumulation_steps\n",
+    "        train_loss += loss.item()\n",
+    "        loss.backward()\n",
+    "        clip_grad_norm_(bert.parameters(), 1.0)\n",
+    "        steps.set_postfix_str(f'avg. loss {train_loss / (i_step + 1):.4f}')\n",
+    "        if (gradient_accumulation_steps <= 1\n",
+    "                or (i_step + 1) % gradient_accumulation_steps == 0):\n",
+    "            optimizer.step()\n",
+    "            scheduler.step()\n",
+    "            optimizer.zero_grad()"
+   ]
   },
   {
    "cell_type": "markdown",
