lots of new stuff.

--- a/Part03_transformer.ipynb
+++ b/Part03_transformer.ipynb
@@ -1830,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1845,7 +1845,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1875,12 +1882,14 @@
    },
    "outputs": [],
    "source": [
-    "from transformers import AdamW\n",
+    "from transformers import AdamW, BertForSequenceClassification\n",
     "from transformers.optimization import WarmupLinearSchedule\n",
     "\n",
     "num_epochs = 5\n",
+    "bert = BertForSequenceClassification.from_pretrained('bert-base-multilingual-cased', num_labels=len(torch.unique(y_train)))\n",
     "params = [p for n, p in bert.named_parameters()]\n",
     "optimizer = AdamW(params, lr=3e-5, correct_bias=False)\n",
+    "\n",
     "\n",
     "num_total_steps = num_epochs * (len(train_dataloader.sampler) // batch_size)\n",
     "num_warmup_steps = int(num_total_steps * 0.15)\n",
