--- a/Part0_TheData.ipynb
+++ b/Part0_TheData.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'08:09'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "f'{datetime.fromtimestamp(time.time() - start_time):%M:%S}'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +57,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1218M  100 1218M    0     0  7814k      0  0:02:39  0:02:39 --:--:-- 7518k 0:02:25  0:01:52  0:00:33 8636k\n"
+      "100 1218M  100 1218M    0     0  12.2M      0  0:01:39  0:01:39 --:--:-- 13.7MM\n"
      ]
     }
    ],
@@ -61,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +109,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 23.2M  100 23.2M    0     0  6841k      0  0:00:03  0:00:03 --:--:-- 6840k\n"
+      "100 23.2M  100 23.2M    0     0  21.5M      0  0:00:01  0:00:01 --:--:-- 21.5M\n"
      ]
     }
    ],
@@ -79,15 +118,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test Data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,8 +135,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +152,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 2690k  100 2690k    0     0  2330k      0  0:00:01  0:00:01 --:--:-- 2331k\n"
+      "100 2690k  100 2690k    0     0  5823k      0 --:--:-- --:--:-- --:--:-- 5823k\n"
      ]
     }
    ],
@@ -123,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
