Added installation details.

--- a/Part01_prerequisites.ipynb
+++ b/Part01_prerequisites.ipynb
@@ -433,6 +433,8 @@
    "source": [
     "Much has been said about word vectors, and as a result I won't go into a lot of detail here, but instead simply refer to the existing excellent resources that are already available.\n",
     "\n",
+    "- Noah Smith: [Contextual Word Representations: A Contextual Introduction](https://arxiv.org/abs/1902.06006)\n",
+    "\n",
     "\n",
     "- Mikolov et al.: [_Efficient Estimation of Word Representations in Vector Space._](http://arxiv.org/abs/1301.3781) ICLR (Workshop Poster) 2013\n",
     "\n",
