changing data set to GNAD

--- a/Part0_TheData.ipynb
+++ b/Part0_TheData.ipynb
@@ -23,7 +23,7 @@
     }
    ],
    "source": [
-    "!curl -O https://dl.fbaipublicfiles.com/fasttext/vectors-crawl/cc.de.300.vec.gz"
+    "!curl -O https://dl.fbaipublicfiles.com/fasttext/vectors-crawl/cc.de.300.vec.SMALL.gz"
    ]
   },
   {
