Added info about BPemb

--- a/Part03_transformer.ipynb
+++ b/Part03_transformer.ipynb
@@ -28,6 +28,13 @@
     "- [The Illustrated BERT, ELMo ...](https://jalammar.github.io/illustrated-bert/)\n",
     "- [The Annotated Transformer](http://nlp.seas.harvard.edu/2018/04/03/attention.html)\n",
     "\n",
+    "---\n",
+    "\n",
+    "# Byte Pair Encoding\n",
+    "\n",
+    "https://nlp.h-its.org/bpemb/\n",
+    "- Provlikov et al.: [BPE-Dropout: Simple and Effective Subword Regularization](https://arxiv.org/abs/1910.13267)\n",
+    "\n",
     "---"
    ]
   },
