--- a/Part03_transformer.ipynb
+++ b/Part03_transformer.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Transformer and BERT"
+    "# Transformer and BERT (thanks 🤗)"
    ]
   },
   {
@@ -19,8 +19,8 @@
     }
    },
    "source": [
-    "- Vaswani et al., [Attention is All you Need.](https://papers.nips.cc/paper/7181-attention-is-all-you-need) NIPS 2017: 5998-6008\n",
-    "- Devlin et al., [BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding.](https://www.aclweb.org/anthology/N19-1423/) NAACL-HLT (1) 2019: 4171-4186\n",
+    "- Vaswani et al., [_Attention is All you Need._](https://papers.nips.cc/paper/7181-attention-is-all-you-need) NIPS 2017: 5998-6008\n",
+    "- Devlin et al., [_BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding._](https://www.aclweb.org/anthology/N19-1423/) NAACL-HLT (1) 2019: 4171-4186\n",
     "\n",
     "---\n",
     "\n",
@@ -28,19 +28,35 @@
     "- [The Illustrated BERT, ELMo ...](https://jalammar.github.io/illustrated-bert/)\n",
     "- [The Annotated Transformer](http://nlp.seas.harvard.edu/2018/04/03/attention.html)\n",
     "\n",
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "# Sub-word tokenistion using Byte Pair Encoding\n",
     "\n",
-    "# Byte Pair Encoding\n",
+    "Tokenise words not based on whitespace, but based on frequency patterns learned from a corpus. The method trains an unsupervised tokeniser and does not, therefore, require any labelled data.\n",
     "\n",
-    "https://nlp.h-its.org/bpemb/\n",
+    "- Sennrich et al.: [Neural Machine Translation of Rare Words with Subword Units.](https://www.aclweb.org/anthology/P16-1162/) ACL (1) 2016\n",
+    "> Neural machine translation (NMT) models typically operate with a fixed vocabulary, but ___translation is an open-vocabulary problem.___ Previous work addresses the translation of out-of-vocabulary words by backing off to a dictionary. In this paper, we introduce a simpler and more effective approach, making the NMT model capable of open-vocabulary translation by encoding rare and unknown words as sequences of subword units. ___This is based on the intuition that various word classes are translatable via smaller units than words, for instance names (via character copying or transliteration), compounds (via compositional translation), and cognates and loanwords (via phonological and morphological transformations)___. [Emphasis mine]\n",
+    "\n",
+    "- Heinzerling et al.: [BPEmb: Tokenization-free Pre-trained Subword Embeddings in 275 Languages.](http://www.lrec-conf.org/proceedings/lrec2018/pdf/1049.pdf) LREC 2018\n",
+    "- [BPEmb: Subword Embeddings in 275 Languages](https://nlp.h-its.org/bpemb/)\n",
     "- Provlikov et al.: [BPE-Dropout: Simple and Effective Subword Regularization](https://arxiv.org/abs/1910.13267)\n",
+    "> While multiple segmentations are possible even with the same vocabulary, BPE splits words into unique sequences; this may prevent a model from better learning the compositionality of words and being robust to segmentation errors.\n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -50,12 +66,12 @@
    "source": [
     "from transformers import BertModel, BertTokenizer\n",
     "\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')"
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-cased')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -65,24 +81,37 @@
     {
      "data": {
       "text/plain": [
-       "[1996, 2047, 4068, 3199, 1006, 2022, 2099, 1007, 2097, 2330, 2574, 1012]"
+       "['The',\n",
+       " 'B',\n",
+       " '##ER',\n",
+       " '##T',\n",
+       " 'token',\n",
+       " '##izer',\n",
+       " '##s',\n",
+       " 'splits',\n",
+       " 'words',\n",
+       " 'into',\n",
+       " 'sub',\n",
+       " '-',\n",
+       " 'word',\n",
+       " 'units',\n",
+       " '.']"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "token_ids = tokenizer.encode('The new Berlin airport (BER) will open soon.')\n",
-    "token_ids"
+    "token_ids = tokenizer.encode('The BERT tokenizers splits words into sub-word units.')\n",
+    "tokenizer.convert_ids_to_tokens(token_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
-    "scrolled": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -91,13 +120,13 @@
     {
      "data": {
       "text/plain": [
-       "['the',\n",
+       "['The',\n",
        " 'new',\n",
-       " 'berlin',\n",
+       " 'Berlin',\n",
        " 'airport',\n",
        " '(',\n",
-       " 'be',\n",
-       " '##r',\n",
+       " 'B',\n",
+       " '##ER',\n",
        " ')',\n",
        " 'will',\n",
        " 'open',\n",
@@ -105,12 +134,13 @@
        " '.']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "token_ids = tokenizer.encode('The new Berlin airport (BER) will open soon.')\n",
     "tokenizer.convert_ids_to_tokens(token_ids)"
    ]
   },
@@ -123,6 +153,13 @@
    },
    "source": [
     "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Document Classification with BERT (thanks 🤗)"
    ]
   },
   {
@@ -439,7 +476,7 @@
     }
    ],
    "source": [
-    "bert = BertModel.from_pretrained('bert-base-uncased')\n",
+    "bert = BertModel.from_pretrained('bert-base-multilingual-cased')\n",
     "bert"
    ]
   },
@@ -1366,6 +1403,10 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1410,21 +1451,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "                Linear SVM with parameter tuning\n",
+    "---\n",
+    "                       BERT classifier head ONLY\n",
     "\n",
-    "                  precision    recall  f1-score   support\n",
+    "                   precision    recall  f1-score   support\n",
+    " \n",
+    "             Etat       0.00      0.00      0.00        67\n",
+    "           Inland       0.00      0.00      0.00       102\n",
+    "    International       0.29      0.03      0.06       151\n",
+    "           Kultur       0.00      0.00      0.00        54\n",
+    "         Panorama       0.18      0.61      0.28       168\n",
+    "            Sport       0.82      0.07      0.14       120\n",
+    "              Web       0.27      0.67      0.38       168\n",
+    "       Wirtschaft       0.00      0.00      0.00       141\n",
+    "     Wissenschaft       0.00      0.00      0.00        57\n",
     "\n",
-    "            comp       0.84      0.87      0.86      1955\n",
-    "             soc       0.73      0.71      0.72       398\n",
-    "            talk       0.74      0.77      0.75      1301\n",
-    "             sci       0.78      0.73      0.76      1579\n",
-    "            misc       0.82      0.76      0.79       390\n",
-    "             rec       0.79      0.86      0.83      1590\n",
-    "             alt       0.62      0.41      0.49       319\n",
+    "         accuracy                           0.22      1028\n",
+    "        macro avg       0.17      0.15      0.09      1028\n",
+    "     weighted avg       0.21      0.22      0.13      1028\n",
     "\n",
-    "        accuracy                           0.79      7532\n",
-    "       macro avg       0.76      0.73      0.74      7532\n",
-    "    weighted avg       0.79      0.79      0.79      7532\n",
+    "\n",
+    "---\n",
+    "                 Linear SVM with parameter tuning\n",
+    "\n",
+    "                   precision    recall  f1-score   support\n",
+    "\n",
+    "             Etat       0.94      0.75      0.83        67\n",
+    "           Inland       0.89      0.84      0.86       102\n",
+    "    International       0.89      0.85      0.87       151\n",
+    "           Kultur       0.89      0.89      0.89        54\n",
+    "         Panorama       0.80      0.88      0.84       168\n",
+    "            Sport       0.99      0.97      0.98       120\n",
+    "              Web       0.92      0.90      0.91       168\n",
+    "       Wirtschaft       0.82      0.88      0.85       141\n",
+    "     Wissenschaft       0.89      0.96      0.92        57\n",
+    "\n",
+    "         accuracy                           0.88      1028\n",
+    "        macro avg       0.89      0.88      0.89      1028\n",
+    "     weighted avg       0.89      0.88      0.88      1028\n",
     "    \n",
     "---\n",
     "\n",
@@ -1598,6 +1662,8 @@
     "\n",
     "num_epochs = 5\n",
     "bert = BertForSequenceClassification.from_pretrained('bert-base-uncased', num_labels=len(torch.unique(y_train)))\n",
+    "\n",
+    "# include ALL the network parameters in the optimizer\n",
     "params = [p for n, p in bert.named_parameters()]  # if .classifier in n]\n",
     "optimizer = AdamW(params, lr=3e-5, correct_bias=False)\n",
     "\n",
