--- a/Part03_transformer.ipynb
+++ b/Part03_transformer.ipynb
@@ -28,6 +28,13 @@
     "- [The Illustrated BERT, ELMo ...](https://jalammar.github.io/illustrated-bert/)\n",
     "- [The Annotated Transformer](http://nlp.seas.harvard.edu/2018/04/03/attention.html)\n",
     "\n",
+    "---\n",
+    "\n",
+    "# Model Compression\n",
+    "\n",
+    "- Liu et al.: [_RoBERTa: A Robustly Optimized BERT Pretraining Approach_](https://arxiv.org/abs/1907.11692)\n",
+    "- Sam Sucik: [Compressing BERT for faster prediction](https://blog.rasa.com/compressing-bert-for-faster-prediction-2/amp/)\n",
+    "\n",
     "---"
    ]
   },
@@ -834,183 +841,6 @@
    "metadata": {},
    "source": [
     "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# German News Categorisation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import load_gnad\n",
-    "\n",
-    "gnad_train, gnad_test = load_gnad()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gnad_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "grid_search = GridSearchCV(pipeline, parameters, cv=5, n_jobs=3, verbose=1)\n",
-    "\n",
-    "label_encoder = LabelEncoder()\n",
-    "y = label_encoder.fit_transform(gnad_train.category)\n",
-    "grid_search.fit(gnad_train.text, y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's see if BERT can do better than that"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import metrics\n",
-    "\n",
-    "y_test = label_encoder.transform(gnad_test.category)\n",
-    "\n",
-    "\n",
-    "print(metrics.classification_report(y_test,\n",
-    "                                    grid_search.best_estimator_.predict(gnad_test.text),\n",
-    "                                    target_names=label_encoder.classes_))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased')\n",
-    "\n",
-    "token_ids = (doc2bert(x_, tokenizer) for x_ in gnad_train.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from torch.utils.data import TensorDataset, RandomSampler, DataLoader\n",
-    "\n",
-    "X_train = torch.LongTensor(list(token_ids))\n",
-    "y_train = torch.LongTensor(y)\n",
-    "\n",
-    "batch_size = 8\n",
-    "data_train = TensorDataset(X_train, y_train)\n",
-    "sampler = RandomSampler(data_train)\n",
-    "train_dataloader = DataLoader(data_train, sampler=sampler, batch_size=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from transformers import AdamW, BertForSequenceClassification\n",
-    "from transformers.optimization import WarmupLinearSchedule\n",
-    "\n",
-    "num_epochs = 5\n",
-    "bert = BertForSequenceClassification.from_pretrained('bert-base-multilingual-cased', num_labels=len(torch.unique(y_train)))\n",
-    "params = [p for n, p in bert.named_parameters()]\n",
-    "optimizer = AdamW(params, lr=3e-5, correct_bias=False)\n",
-    "\n",
-    "\n",
-    "num_total_steps = num_epochs * (len(train_dataloader.sampler) // batch_size)\n",
-    "num_warmup_steps = int(num_total_steps * 0.15)\n",
-    "scheduler = WarmupLinearSchedule(optimizer, warmup_steps=num_warmup_steps, t_total=num_total_steps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm_notebook as tqdmn\n",
-    "from torch.nn.utils import clip_grad_norm_\n",
-    "\n",
-    "# Use a GPU if one is available\n",
-    "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "bert.to(DEVICE)\n",
-    "\n",
-    "for _ in tqdmn(range(num_epochs), total=num_epochs, desc=\"Epoch\"):\n",
-    "    steps = tqdmn(train_dataloader,\n",
-    "                  total=X_train.size()[0] // train_dataloader.batch_size + 1,\n",
-    "                  desc='Mini-batch')\n",
-    "    train_loss = 0\n",
-    "    for i_step, batch in enumerate(steps):\n",
-    "        batch_X, batch_y = (b.to(DEVICE) for b in batch)\n",
-    "        loss, *_ = bert(batch_X, labels=batch_y)\n",
-    "        train_loss += loss.item()\n",
-    "        loss.backward()\n",
-    "        clip_grad_norm_(bert.parameters(), 1.0)\n",
-    "        steps.set_postfix_str(f'avg. loss {train_loss / (i_step + 1):.4f}')\n",
-    "        \n",
-    "        optimizer.step()\n",
-    "        scheduler.step()\n",
-    "        optimizer.zero_grad()"
    ]
   }
  ],
