--- a/Part01_prerequisites.ipynb
+++ b/Part01_prerequisites.ipynb
@@ -37,9 +37,8 @@
     "    \n",
     "    \n",
     "- the optimizer\n",
-    "    - SGD\n",
-    "    - Adam\n",
-    "    - AdamW\n",
+    "    - SGD, SGD with momentum\n",
+    "    - Adam, AdamW, RAdam\n",
     "    \n",
     "    \n",
     "- the scheduler\n",
@@ -114,23 +113,18 @@
     "\n",
     "## 1.2 Optimizer and Scheduler\n",
     "\n",
-    "- Sebastian Ruder: [An overview of gradient descent optimization algorithms](http://ruder.io/optimizing-gradient-descent/) January 2016"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stochastic Gradient Descent\n",
+    "- Sebastian Ruder: [An overview of gradient descent optimization algorithms](http://ruder.io/optimizing-gradient-descent/) January 2016\n",
+    "\n",
+    "### Stochastic Gradient Descent\n",
     "\n",
     "- update network parameters by a fraction _learning rate_ after each example\n",
     "\n",
     "\n",
-    "## Mini-batch Gradient Descent\n",
+    "### Mini-batch Gradient Descent\n",
     "\n",
     "- update network parameters by a fraction _learning rate_ after each mini-batch of size $ n>1 $\n",
     "\n",
-    "## Adaptive Learning Rate Optimizers\n",
+    "### Adaptive Learning Rate Optimizers\n",
     "\n",
     "- Adagrad, RMSprop, Adam, RAdam, AdamW\n",
     "- Liu et al.: [On the Variance of the Adaptive Learning Rate and Beyond](https://arxiv.org/abs/1908.03265)\n",
@@ -176,7 +170,7 @@
     "### 1.3.1 A Learning Function\n",
     "Define a training function that loops through the training data some number of times and updates the model weights as well as the learning rate schedule.\n",
     "\n",
-    "__Note__ that each iteration over the inner for loop takes _one batch_ of data from the `pytorch` data loader class. The batch size determines how much data is used to compute the gradient. ___This will become important later!___\n"
+    "__Note__: each iteration over the inner for loop takes _one batch_ of data from the `pytorch` data loader class. The batch size determines how much data is used to compute the gradient. ___This will become important later!___"
    ]
   },
   {
