--- a/Part03_transformer.ipynb
+++ b/Part03_transformer.ipynb
@@ -35,6 +35,13 @@
     "- Liu et al.: [_RoBERTa: A Robustly Optimized BERT Pretraining Approach_](https://arxiv.org/abs/1907.11692)\n",
     "- Sam Sucik: [Compressing BERT for faster prediction](https://blog.rasa.com/compressing-bert-for-faster-prediction-2/amp/)\n",
     "\n",
+    "---\n",
+    "\n",
+    "# Interpretability\n",
+    "\n",
+    "- Jain et al.: [Attention is not Explanation](https://arxiv.org/abs/1902.10186)\n",
+    "- Alon Jacovi: [The Problem of Faithfulness in (Neural Network) NLP Interpretations](https://medium.com/@alonjacovi/the-problem-of-faithfulness-in-neural-network-nlp-interpretations-ee98d7027cbd)\n",
+    "\n",
     "---"
    ]
   },
