--- a/Part03_transformer.ipynb
+++ b/Part03_transformer.ipynb
@@ -41,6 +41,7 @@
     "\n",
     "- Jain et al.: [Attention is not Explanation](https://arxiv.org/abs/1902.10186)\n",
     "- Alon Jacovi: [The Problem of Faithfulness in (Neural Network) NLP Interpretations](https://medium.com/@alonjacovi/the-problem-of-faithfulness-in-neural-network-nlp-interpretations-ee98d7027cbd)\n",
+    "> An easy observation to make is that faithfulness is in a trade-off balance with another key problem of interpretability, which is readability: how easy-to-understand the explanation is by a human.\n",
     "\n",
     "---"
    ]
